--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ RABBITMQ_PWD='guest'
 RABBITMQ_HOST='127.0.0.1'
 RABBITMQ_PORT='5672'
 MYSQL_MICROSERVICE_URL='http://localhost:3001/'
-DB_CONNECTION_URI='mysql://root:root1234@localhost/full-feature-micro-service-example'
-TEST_DB_CONNECTION_URI='mysql://root:root1234@localhost/full-feature-micro-service-example'
+DB_CONNECTION_URI='mysql://root:password@localhost/full_feature_microservice_example'
+TEST_DB_CONNECTION_URI='mysql://root:password@localhost/full_feature_micro_service_example'
 RUN_INTEGRATION_TESTS=true
 LOG_LEVEL="info"
