--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "private": true,
   "scripts": {
     "start:prod": "node ./bin/www",
-    "start": "node_modules/.bin/cross-env NODE_ENV=development nodemon ./bin/www",
+    "start": "node_modules/.bin/cross-env NODE_ENV=development nodemon --require ./setup-env.js ./bin/www",
     "test": "npm run coverage",
-    "test:integrationall": "npm run db:migrate && npm run test:integration",
+    "test:integrationall": "npm run db:migrate:test && npm run test:integration",
+    "db:migrate:test": "node_modules/.bin/cross-env NODE_ENV=test node -r ./setup-env.js node_modules/.bin/sequelize db:migrate --config src/config/db-config.js",
+    "db:migrate": "node_modules/.bin/sequelize db:migrate --config src/config/db-config.js",
+    "db:migrate:prod": "node_modules/.bin/cross-env NODE_ENV=production node_modules/.bin/sequelize db:migrate --config src/config/db-config.js",
     "apidocs:generate": "node_modules/.bin/cross-env GENERATE_DOCS=true node ./bin/www",
-    "db:migrate": "node_modules/.bin/cross-env NODE_ENV=test-integration node_modules/.bin/sequelize db:migrate --config src/config/db-config.js",
     "test:integration": "node_modules/.bin/cross-env NODE_ENV=test nyc mocha \"test/integration/**/*.spec.js\" --exit",
     "test:integrationwatch": "node_modules/.bin/cross-env NODE_ENV=test nyc mocha \"**/test/integration/**/*.spec.js\" --watch",
     "coverage": "node_modules/.bin/cross-env NODE_ENV=test nyc npm run test:unit",
@@ -28,8 +30,10 @@
     "delay": "2500"
   },
   "dependencies": {
-    "@apifie/node-microservice": "0.0.3",
-    "dotenv": "^6.0.0"
+    "@apifie/node-microservice": "0.0.5",
+    "dotenv": "^6.0.0",
+    "chai-http": "4.2.0",
+    "joi": "13.6.0"
   },
   "devDependencies": {
     "babel-plugin-istanbul": "4.1.5",
